// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isActive defaults to false 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <span
      className="kbnFieldButton__name"
    >
      name
    </span>
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;

exports[`isActive renders true 1`] = `
<div
  className="kbnFieldButton kbnFieldButton-isActive"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <span
      className="kbnFieldButton__name"
    >
      name
    </span>
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;

exports[`isDraggable is rendered 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--isDraggable"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <span
      className="kbnFieldButton__name"
    >
      name
    </span>
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;

exports[`sizes m is applied 1`] = `
<div
  className="kbnFieldButton"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <span
      className="kbnFieldButton__name"
    >
      name
    </span>
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;

exports[`sizes s is applied 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--small"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__content"
  >
    <span
      className="kbnFieldButton__name"
    >
      name
    </span>
  </button>
  <div
    className="kbnFieldButton__append"
  />
</div>
`;
